# cmake-practice

./: README.md
cmake_practice/0.lovelife-cmake/: CMakeLists.txt  lovelife  lovelife.cpp  readme.md
cmake_practice/1.include_header/: CMakeLists.txt  include_header  readme.md
cmake_practice/1.include_header/src/: love.cpp  main.cpp
cmake_practice/2.static_library/: CMakeLists.txt  readme.md
cmake_practice/2.static_library/include/static/: love.h
cmake_practice/2.static_library/src/: love.cpp  main.cpp
cmake_practice/3.shared_library/: CMakeLists.txt  readme.md  shared_program
cmake_practice/3.shared_library/src/: love.cpp  main.cpp
cmake_practice/4.out_of_source_build/: CMakeLists.txt  readme.md
cmake_practice/8.proto_test/: CMakeLists.txt  readme.md
cmake_practice/8.proto_test/include/: family.pb.h
cmake_practice/8.proto_test/proto/: family.proto
cmake_practice/8.proto_test/src/: family.pb.cc  main.cpp
